--- a/index.htm
+++ b/index.htm
@@ -1,1 +1,8 @@
 hello world
+<p></p>
+    <select id="cities" name="cities">
+        <option value="taipei">請選擇</option>
+        <option value="taipei">台北</option>
+        <option value="taichung">台中</option>
+        <option value="kaohsiung">高雄</option>
+    </select>
